--- a/app/src/main/res/layout/fragment_selected_komik.xml
+++ b/app/src/main/res/layout/fragment_selected_komik.xml
@@ -11,7 +11,8 @@
         android:layout_width="200dp"
         android:layout_height="280dp"
         android:layout_gravity="center"
-        android:layout_marginTop="12dp"/>
+        android:layout_marginTop="12dp"
+        android:background="@color/black"/>
 
     <TextView
         android:id="@+id/title_selected"
@@ -76,7 +77,9 @@
         android:id="@+id/shareBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:text="Share"
+        android:background="@drawable/button"
         android:layout_gravity="center"/>
 
 
